--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup --verbose"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "vue": "^2.3.3",
     "vue-material": "^0.7.4",
     "vue-router": "^2.3.1"
